# cubeplane

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  cubeplane.toml  run.sh
admin/: .env.example  README.md  package.json  tsconfig.json
admin/src/: config.ts  dashboard.ts  engine.ts  index.ts
crates/cubeplane/: Cargo.toml
crates/cubeplane/src/: main.rs
crates/mods/: Cargo.toml
crates/mods/src/: event.rs  host.rs  lib.rs  prelude.js
crates/mods/tests/: runtime.rs
crates/nbt/: Cargo.toml
crates/nbt/src/: lib.rs  value.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: error.rs  lib.rs  packet.rs  read.rs  write.rs
crates/server/: Cargo.toml
crates/server/src/: advancements.rs  ai.rs  brewing.rs  clientbound.rs  codec.rs  combat.rs  commands.rs  config.rs  connection.rs  control.rs  drops.rs  effects.rs  encryption.rs  entity.rs  furnace.rs  ids.rs  inventory.rs  item.rs  items_table.rs  lib.rs  mobs.rs  mobs_table.rs  mod_actions.rs  persistence.rs  player.rs  recipe.rs  registry.rs  serverbound.rs  sim.rs  spawn.rs  state.rs  text.rs  version.rs
crates/server/tests/: protocol_e2e.rs
crates/world/: Cargo.toml
crates/world/src/: biome.rs  block.rs  blocks_table.rs  chunk.rs  gen.rs  lib.rs
docs/: AI_VILLAGERS.md  ARCHITECTURE.md  MODDING.md  MULTIVERSION.md  PROTOCOL.md
mods/: builder.js  playground.js  welcome.js
site/: docs.html  index.html
