[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/nbt",
    "crates/world",
    "crates/mods",
    "crates/server",
    "crates/cubeplane",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["wess <me@wess.io>"]
repository = "https://github.com/wess/cubeplane"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
cubeplane-protocol = { path = "crates/protocol" }
cubeplane-nbt = { path = "crates/nbt" }
cubeplane-world = { path = "crates/world" }
cubeplane-mods = { path = "crates/mods" }
cubeplane-server = { path = "crates/server" }

# Async runtime + networking
tokio = { version = "1", features = ["full"] }
bytes = "1"
flate2 = "1"

# Embedded JS mod runtime
rquickjs = { version = "0.9", features = ["full-async", "parallel"] }

# Serialization / config / control API
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
axum = { version = "0.7", features = ["ws"] }

# Utilities
uuid = { version = "1", features = ["v3", "v4", "serde"] }
rand = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
