[package]
name = "cubeplane-nbt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Minimal Named Binary Tag (NBT) reader/writer/builder for cubeplane"

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
