[package]
name = "cubeplane-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Minecraft Java Edition (protocol 763 / 1.20.1) wire protocol primitives for cubeplane"

[dependencies]
bytes = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
