[package]
name = "cubeplane-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Networking, connection state machine and game loop for cubeplane"

[dependencies]
cubeplane-protocol = { workspace = true }
cubeplane-nbt = { workspace = true }
cubeplane-world = { workspace = true }
cubeplane-mods = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
