[package]
name = "cubeplane-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Networking, connection state machine and game loop for cubeplane"

[dependencies]
cubeplane-protocol = { workspace = true }
cubeplane-nbt = { workspace = true }
cubeplane-world = { workspace = true }
cubeplane-mods = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rsa = "0.9"
sha1 = "0.10"
aes = "0.8"
cfb8 = "0.8"
num-bigint-dig = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
