[package]
name = "cubeplane-world"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Block registry, chunk storage and world generation for cubeplane"

[dependencies]
cubeplane-protocol = { workspace = true }
cubeplane-nbt = { workspace = true }
bytes = { workspace = true }
